# openapi-generator

./: '  .dockerignore  .envrc  .geminiignore  .gitattributes  .gitignore  .gitpod.yml  .hub.cli.dockerfile  .hub.online.dockerfile  .java-version  .openapi-generator-ignore  .sdkmanrc  .tool-versions  .travis.objc_swift_test.yml  .travis.yml  .travis.yml.ios  .typos.toml  00163030.017eab7a.js  00163030.01980ac8.js  00163030.04306acc.js  00163030.04f107ee.js  00163030.06041e1f.js  00163030.07aa96a2.js  00163030.089549db.js  00163030.08f2abc2.js  00163030.0994cc2c.js  00163030.0acf37a8.js  00163030.0b2a662d.js  00163030.0b6c179f.js  00163030.0d2f9e18.js  00163030.0e7094dd.js  00163030.0eb1638b.js  00163030.0f056915.js  00163030.10962ae2.js  00163030.12896f48.js  00163030.128fe11e.js  00163030.14aa8692.js  00163030.1521eac0.js  00163030.156297e5.js  00163030.15941bc9.js  (+288948 more)
samples/client/c/: CMakeLists.txt
samples/client/c/api/: petAPI.c
samples/client/c/include/: apiClient.h  category.h  list.h  pet.h  petApi.h  tag.h
samples/client/c/model/: category.c  pet.c
samples/client/c/src/: apiClient.c  list.c
samples/client/c/unit-tests/: test-category.c  test-list.c  test-pet.c  test-petApi.c
samples/client/echo_api/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
samples/client/echo_api/python-nextgen/: README.md  pyproject.toml  requirements.txt  setup.py
samples/client/echo_api/python-nextgen/.openapi-generator/: FILES
samples/client/echo_api/python-nextgen/docs/: Bird.md  BodyApi.md  DefaultValue.md  FormApi.md  HeaderApi.md  PathApi.md  QueryApi.md
samples/client/echo_api/python-nextgen/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
samples/client/echo_api/python-nextgen/test/: :  ;  custom_tests.py  test_manual.py
samples/client/echo_api/python/.openapi-generator/: FILES
samples/client/echo_api/python/docs/: AuthApi.md  Bird.md  BodyApi.md  Category.md  DataQuery.md  DataQueryAllOf.md  DefaultValue.md  FormApi.md  HeaderApi.md  NumberPropertiesOnly.md  PathApi.md  Pet.md  Query.md  QueryApi.md  Tag.md  TestFormObjectMultipartRequestMarker.md  TestQueryStyleDeepObjectExplodeTrueObjectAllOfQueryObjectParameter.md  TestQueryStyleFormExplodeTrueArrayIntegerQueryObjectParameter.md  TestQueryStyleFormExplodeTrueArrayStringQueryObjectParameter.md
samples/client/echo_api/python/echo_client/: __init__.py  api_client.py  configuration.py  rest.py
samples/client/echo_api/python/openapi_client/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
samples/client/echo_api/python/test/: test_auth_api.py  test_bird.py  test_body_api.py  test_category.py  test_data_query.py  test_data_query_all_of.py  test_default_value.py  test_form_api.py  test_header_api.py  test_manual.py  test_number_properties_only.py  test_path_api.py  test_pet.py  test_query.py  test_query_api.py  test_string_enum_ref.py  test_tag.py  test_test_form_object_multipart_request_marker.py  test_test_query_style_deep_object_explode_true_object_all_of_query_object_parameter.py  test_test_query_style_form_explode_true_array_string_query_object_parameter.py
samples/client/echo_api/python/tests/: test_manual.py
samples/client/petstore/c/: .openapi-generator-ignore  CMakeLists.txt  README.md  build-and-test.bash  pom.xml  uncrustify-rules.cfg
samples/client/petstore/c/.openapi-generator/: FILES
samples/client/petstore/c/api/: PetAPI.c  PetAPI.h  StoreAPI.c  StoreAPI.h  UserAPI.c  UserAPI.h  petAPI.c
samples/client/petstore/c/docs/: MappedModel.md  PetAPI.md  StoreAPI.md  UserAPI.md  another_model.md  api_response.md  model_with_set_propertes.md  model_with_set_properties.md  pet.md  tag.md
samples/client/petstore/c/include/: apiClient.h  apiKey.h  binary.h  category.h  keyValuePair.h  list.h  pet.h  petApi.h  tag.h
samples/client/petstore/c/model/: another_model.c  another_model.h  api_response.c  api_response.h  category.c  category.h  mapped_model.c  mapped_model.h  model_with_set_propertes.c  model_with_set_propertes.h  model_with_set_properties.c  object.c  object.h  order.c  order.h  pet.c  pet.h  tag.c  tag.h  user.c  user.h
samples/client/petstore/c/src/: apiClient.c  apiKey.c  binary.c  list.c
samples/client/petstore/c/unit-test/: test-PetAPI.c  test-StoreAPI.c  test-UserAPI.c  (+18 more)
samples/client/petstore/cpp-boost-beast/: .gitignore  CMakeLists.txt  build-and-test.bash  imposter_run.sh  pom.xml
samples/client/petstore/cpp-qt/: .clang-format  .gitignore  CMakeLists.txt  README.md  build-and-test.bash  pom.xml
samples/client/petstore/cpp-qt5/: CMakeLists.txt  README.md  build-and-test.bash
samples/client/petstore/cpp-restsdk/: .gitignore  ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h  PetApiTests.cpp  PetApiTests.h  README.md  main.cpp  pom.xml
samples/client/petstore/ocaml-additional-properties/: .ocamlformat  README.md  petstore_client.opam
samples/server/petstore/cpp-httplib-server/: CMakeLists.txt  README.md
samples/server/petstore/cpp-oatpp/: CMakeLists.txt  README.md  main-api-server.cpp
samples/server/petstore/cpp-pistache/: .gitignore  CMakeLists.txt  PetApiMainServer.cpp  README.md  build_petstore.sh  install_pistache.sh  main-api-server.cpp  pom.xml
samples/server/petstore/cpp-restbed/: .gitignore  CMakeLists.txt  build_and_test.sh  pom.xml
samples/server/petstore/haskell-servant/: README.md  haskell-servant-codegen.cabal  openapi-petstore.cabal  pom.xml  stack.yaml  swagger-petstore.cabal
samples/server/petstore/pistache-server/: CMakeLists.txt  PetApiMainServer.cpp  README.md  StoreApiMainServer.cpp  UserApiMainServer.cpp
samples/server/petstore/python-fastapi/: Dockerfile  README.md  docker-compose.yaml  openapi.yaml  pom.xml  requirements.txt  setup.cfg  test_python3.sh
(+102682 files in other folders)
