opam-version: "2.0"
name: "petstore_client"
version: "1.0.0"
synopsis: ""
description: """
Longer description
"""
maintainer: "Name <email>"
authors: "Name <email>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [
  "ocaml"
  "ocamlfind"
  "ocamlformat" {= "0.27.0"}
  "dune"
  "ppx_deriving_yojson"
  "conf-libev"
  "lwt"
  "cohttp-lwt-unix" {< "6.0.0"}
  "cohttp-async" {< "6.0.0"}
]
build: ["dune" "build" "-p" name]
