[metadata]
name = openapi_server
version = 1.0.0
description = This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
long_description = file: README.md
keywords = OpenAPI OpenAPI Petstore
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    fastapi[all]
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src
