[tool.poetry]
name = "petstore_api"
version = "1.0.0"
description = "OpenAPI Petstore"
authors = ["OpenAPI Generator Community <team@openapitools.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "OpenAPI Petstore"]
include = ["petstore_api/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pem = ">= 19.3.0"
pycryptodome = ">= 3.9.0"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
